# internal/api/rest/v0/controllers/server.go
@@ -14,6 +14,12 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
+type HealthStatus struct {
+	ServerName string `json:"server_name"`
+	ServerURL  string `json:"server_url"`
+	Status     string `json:"status"`
+}
+
 // @CreateServer godoc
 // @Summary Create Server
 // @Description Create Server
@@ -142,3 +148,129 @@ func GetServers(c *fiber.Ctx) error {
 
 	return c.Status(fiber.StatusOK).JSON(response)
 }
+
+// ShowStatus godoc
+// @Summary Show the health status of servers
+// @Description Fetches the health status of all servers
+// @Tags servers
+// @Produce json
+// @Success 200 {object} map[string][]HealthStatus
+// @Router /api/v0/servers/health [get]
+// func ShowStatus(c *fiber.Ctx) error {
+// 	cfg, err := config.LoadConfig("config.json")
+// 	if err != nil {
+// 		fmt.Printf("[status.go]: error loading config file: %v\n", err)
+// 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+// 			"code":    fiber.StatusInternalServerError,
+// 			"message": err.Error(),
+// 		})
+// 	}
+
+// 	messageSender, err := smtp.NewSMTP("config.json")
+// 	if err != nil {
+// 		fmt.Printf("Failed to initialize SMTP: %v\n", err)
+// 		return err
+// 	}
+
+// 	var wg sync.WaitGroup
+// 	var mu sync.Mutex
+// 	status := []HealthStatus{}
+
+// 	for _, server := range cfg.Servers {
+// 		wg.Add(1)
+
+// 		go func(server config.Server) {
+// 			defer wg.Done()
+
+// 			// err := usecases.CheckServer(server.Name, server.Url, "logs/errors.log", cfg.Basic.Timeout, messageSender)
+// 			err := usecases.CheckServer(ctx, entities.Server{Name: server.Name, Url: server.Url}, cfg.Basic.Timeout, smtpUseCase)
+// 			serverStatus := "Healthy"
+// 			if err != nil {
+// 				serverStatus = "Unhealthy"
+// 			}
+
+// 			mu.Lock()
+// 			status = append(status, HealthStatus{
+// 				ServerName: server.Name,
+// 				ServerURL:  server.Url,
+// 				Status:     serverStatus,
+// 			})
+// 			mu.Unlock()
+// 		}(server)
+// 	}
+
+// 	wg.Wait()
+
+//		return c.Status(fiber.StatusOK).JSON(fiber.Map{
+//			"servers": status,
+//		})
+//	}
+
+// func ShowStatus(c *fiber.Ctx) error {
+// 	// Connect to the database
+// 	pool, err := pgx.PostgresPool()
+// 	if err != nil {
+// 		log.Printf("[ShowStatus]: Failed to connect to database: %v\n", err)
+// 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+// 			"code":    fiber.StatusInternalServerError,
+// 			"message": "Failed to connect to the database",
+// 		})
+// 	}
+
+// 	// Initialize repositories
+// 	serverRepo := pgx_repositories.NewPgxServerRepository(pool)
+// 	basicRepo := pgx_repositories.NewPgxBasicRepository(pool)
+
+// 	// Get servers from the database
+// 	servers, err := serverRepo.List(c.Context())
+// 	if err != nil {
+// 		log.Printf("[ShowStatus]: Failed to fetch servers: %v\n", err)
+// 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+// 			"code":    fiber.StatusInternalServerError,
+// 			"message": "Failed to fetch servers",
+// 		})
+// 	}
+
+// 	// Get basic configuration from the database
+// 	basicConfig, err := basicRepo.Get(c.Context())
+// 	if err != nil {
+// 		log.Printf("[ShowStatus]: Failed to fetch basic config: %v\n", err)
+// 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+// 			"code":    fiber.StatusInternalServerError,
+// 			"message": "Failed to fetch basic config",
+// 		})
+// 	}
+
+// 	var wg sync.WaitGroup
+// 	var mu sync.Mutex
+// 	status := []HealthStatus{}
+
+// 	// Check each server concurrently
+// 	for _, server := range servers {
+// 		wg.Add(1)
+// 		go func(server entities.Server) {
+// 			defer wg.Done()
+
+// 			err := usecases.CheckServer(c.Context(), server, basicConfig.Timeout)
+
+// 			serverStatus := "Healthy"
+// 			if err != nil {
+// 				serverStatus = "Unhealthy"
+// 			}
+
+// 			mu.Lock()
+// 			status = append(status, HealthStatus{
+// 				ServerName: server.Name,
+// 				ServerURL:  server.Url,
+// 				Status:     serverStatus,
+// 			})
+// 			mu.Unlock()
+// 		}(server)
+// 	}
+
+// 	wg.Wait()
+
+// 	return c.Status(fiber.StatusOK).JSON(fiber.Map{
+// 		"servers": status,
+// 	})
+// }
