# internal/api/rest/v0/router.go
@@ -15,6 +15,7 @@ func GroupControllers(app *fiber.Router) {
 	protected.Post("/servers", controllers.CreateServer)
 	protected.Delete("/servers", controllers.DeleteServer)
 	protected.Get("/servers", controllers.GetServers)
+	// protected.Get("/servers/health", controllers.ShowStatus)
 
 	protected.Get("/basic", controllers.GetBasicConfig)
 	protected.Put("/basic", controllers.UpdateBasicConfig)
@@ -22,6 +23,4 @@ func GroupControllers(app *fiber.Router) {
 	protected.Post("/receiver", controllers.CreateReceiver)
 	protected.Delete("/receiver", controllers.DeleteReceiver)
 	protected.Get("/receiver", controllers.GetReceivers)
-
-	v0.Get("/health", controllers.ShowStatus)
 }
